# Interpreter-

./: ArrayValue.hpp  BaseValue.hpp  BoolValue.cpp  BoolValue.hpp  CMakeLists.txt  ExprTree.cpp  ExprTree.hpp  NumValue.cpp  NumValue.hpp  Parser.cpp  Parser.hpp  README.md  StringValue.cpp  StringValue.hpp  Tokenizer.hpp  Tokinezer.cpp  main.cpp  test.stuck
include/: ArrayValue.hpp  BaseValue.hpp  BoolValue.hpp  EvalFunctions.hpp  ExprTree.hpp  ExprTreeBuilding.hpp  Interpreter.hpp  NumValue.hpp  Parser.hpp  StringValue.hpp  Tokenizer.hpp  command.hpp  commandInterpreter.hpp  funcCommand.hpp  printCommand.hpp  readCommand.hpp  setArrayFunctions.hpp  setBoolFunctions.hpp  setCommand.hpp  setExistingNodeFunction.hpp  setNumFunctions.hpp  setStringFunctions.hpp
src/: ArrayValue.cpp  EvalFunctions.cpp  ExprTree.cpp  ExprTreeBuilding.cpp  Interpreter.cpp  Parser.cpp  Tokinezer.cpp  commandInterpreter.cpp  funcCommand.cpp  main.cpp  printCommand.cpp  readCommand.cpp  setArrayFunctions.cpp  setBoolFunctions.cpp  setCommand.cpp  setExistingNodeFunction.cpp  setNumFunctions.cpp  setStringFunctions.cpp
test/: CMakeLists.txt  main.cpp
